k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: shortly
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
